--- a/src/app/todo/todo-list/todo-list.component.html
+++ b/src/app/todo/todo-list/todo-list.component.html
@@ -3,23 +3,39 @@
     <h2>Todo List</h2>
   </div>
   <div class="card-body">
-    <table class="table table-hover table-striped">
+    <table
+      class="table table-hover table-striped"
+      *ngIf="todos && todos.length > 0"
+    >
       <tr>
         <th>id</th>
         <th>todo</th>
         <th>priority</th>
         <th>action</th>
       </tr>
-      <tr *ngFor="let todo of todos | async">
-        <td>{{todo.id}}</td>
-        <td>{{todo.value}}</td>
-        <td>{{todo.priority}}</td>
+      <tr *ngFor="let todo of todos">
+        <td>{{ todo.id }}</td>
+        <td>{{ todo.value }}</td>
+        <td>{{ todo.priority }}</td>
         <td>
-          <button class="btn btn-outline-danger float-right" (click)="onDelete(todo)">Remove</button>
-          <button class="btn btn-outline-primary float-right" (click)="onEdit(todo)">Edit</button>
+          <button
+            class="btn btn-outline-danger float-right"
+            (click)="onDelete(todo)"
+          >
+            Remove
+          </button>
+          <button
+            class="btn btn-outline-primary float-right"
+            (click)="onEdit(todo)"
+          >
+            Edit
+          </button>
         </td>
       </tr>
     </table>
+
+    <p *ngIf="todos === undefined || todos.length === 0">
+      No todo items found.
+    </p>
   </div>
 </div>
-
